Pruefung/Files/05-deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/<YOUR_GITHUB_USERNAME>/counter-backend:v1   # <-- Anpassen
          ports:
            - containerPort: 3000
              protocol: TCP
