Pruefung/Files/04-service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-database
  labels:
    app: counter-database
spec:
  selector:
    app: counter-database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgresql
