Pruefung/Files/06-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  selector:
    app: counter-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
