Pruefung/Files/09-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
