Pruefung/Files/10-route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-frontend
  labels:
    name: counter-frontend
spec:
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect   # HTTP → HTTPS
  wildcardPolicy: None
